--- a/qof/debian/changelog
+++ b/qof/debian/changelog
@@ -4,8 +4,9 @@ qof (0.7.3-1) unstable; urgency=low
   * debian/control: migrate doxygen to Build-Depends-Indep
   * debian/control: use new dpkg fields
   * configure.in : tidy up use of qofsql for embedded use
+  * make the sqlite backend build by default
 
- -- Neil Williams <codehelp@debian.org>  Wed, 14 Nov 2007 23:35:20 +0000
+ -- Neil Williams <codehelp@debian.org>  Thu, 15 Nov 2007 00:28:50 +0000
 
 qof (0.7.2-1) unstable; urgency=low
 
